--- a/app/src/main/res/layout/single_detaill_layout.xml
+++ b/app/src/main/res/layout/single_detaill_layout.xml
@@ -2,15 +2,17 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     >
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
         android:id="@+id/layout"
-        android:orientation="horizontal"
-        android:layout_marginTop="23dp">
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_marginTop="23dp"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/mosqueimage"
@@ -19,29 +21,44 @@
 
             android:layout_marginLeft="2dp"
             app:srcCompat="@drawable/images" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_alignEnd="@+id/layout"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/nametxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Name"
-                android:textSize="18sp"
                 android:layout_marginLeft="7dp"
-                android:layout_marginTop="3dp"/>
+                android:layout_marginTop="3dp"
+                android:text="Name"
+                android:textSize="18sp" />
+
             <TextView
                 android:id="@+id/addresstxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="address"
-                android:textSize="18sp"
                 android:layout_marginLeft="7dp"
                 android:layout_marginTop="7dp"
-                />
+                android:text="address"
+                android:textSize="18sp" />
 
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right">
 
+                <ImageView
+                    android:id="@+id/heart"
+                    android:layout_width="20dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:srcCompat="@drawable/download" />
+            </android.support.constraint.ConstraintLayout>
 
         </LinearLayout>
 
